# aws-profile-cli

./: README-cli.md  README.md  install.sh  pyproject.toml
aws_profile/: __main__.py  main.py
old/: README.md  aws-switch.py  setup.py  sso-login.sh  test.py
tests/: test_aws_profile.py
