[tool.poetry]
name = "aws-profile"
version = "0.1.0"
description = ""
authors = ["German Fodino <german.fodino@gmail.com>"]
readme = "README-cli.md"

[tool.poetry.scripts]
aws-profile = "aws_profile.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
